--- a/lessons4/index.html
+++ b/lessons4/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>hello</title>
+    <title>hello electron</title>
 </head>
 <body>
     <div class="main">
-        hello world peter
+        <button id="openWindow">打开新窗口</button>
     </div>
     <script src="render/index.js"></script>
 </body>
