--- a/lessons5/index.html
+++ b/lessons5/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>electron</title>
-    <style>
-    
+    <title>Document</title>
+
+    <style>    
+        .content{
+            width: 100%;
+            height: 400px;
+            background: orange;
+            overflow-y: auto;
+        }
     </style>
+  
 </head>
 <body>
-    <div>
-        <span id="paste">粘贴:粘贴我，点击菜单来复制我！</span>
-        <input id='copyInput' type="text" placeholder='粘贴到我这啊！'>
-    </div>
+  <div>
+      菜单栏目操作
+      <script src="./renderer/menu.js"></script>
+  </div>
 </body>
 </html>
